@@ -366,9 +366,9 @@ C-w  Describe how there is no warranty for Calc."
       (Info-goto-node (buffer-substring (match-beginning 1) (match-end 1))))
     (or (let ((case-fold-search nil))
 	  (or (re-search-forward (format "\\[`%s'\\]\\|(`%s')\\|\\<The[ \n]`%s'"
-                                         (or target thing)
-                                         (or target thing)
-                                         (or target thing)) nil t)
+                                         (or target (regexp-quote thing))
+                                         (or target (regexp-quote thing))
+                                         (or target (regexp-quote thing))) nil t)
 	      (and not-quoted
 		   (let ((case-fold-search t))
 		     (search-forward (or target thing) nil t)))
@@ -376,9 +376,9 @@ C-w  Describe how there is no warranty for Calc."
 	      (search-forward (or target thing) nil t)))
 	(let ((case-fold-search t))
 	  (or (re-search-forward (format "\\[`%s'\\]\\|(`%s')\\|\\<The[ \n]`%s'"
-                                         (or target thing)
-                                         (or target thing)
-                                         (or target thing)) nil t)
+                                         (or target (regexp-quote thing))
+                                         (or target (regexp-quote thing))
+                                         (or target (regexp-quote thing))) nil t)
 	      (search-forward (format "`%s'" (or target thing)) nil t)
 	      (search-forward (or target thing) nil t))))
     (beginning-of-line)
