@@ -1,3 +1,8 @@
+2014-10-02  
+
+	* calc/calc-help.el (calc-describe-thing): Quote strings
+	which could look like regexps.
+
 2014-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	Consolidate x-select-text.
